# RAGgae

./: .gitignore  README.md  chat_models.txt  pyproject.toml
app/: benchmark.py  clear_gpu.py  evaluate.py  ingest.py  main.py  rag_runner.py  ragas_evaluation_metrics.csv  ragged.py  reader.py  retriever.py
app/my_local_model/: tokenizer_config.json
best_prompts/: prompt_in_chat_format.py
chunking/: RCTS.txt  embed_chunk.txt  semantic_output.txt
experiment_notebooks/: document_retrieving.ipynb  test_hf.ipynb  test_hf_with_RAGAS.ipynb  test_notebook.ipynb
